--- a/grc338/ website-mobile-first/about.html
+++ b/grc338/ website-mobile-first/about.html
@@ -30,7 +30,7 @@
 
         <h2>About Us</h2>
 
-        <img src="placeholder.jpg" alt="" />
+        <img src="placeholder.jpg" alt="image placeholder" />
 
         <p>
             This is a first of four paragraphs with filler text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque cursus mi a risus sodales iaculis. Donec fringilla posuere mauris, sit amet scelerisque est viverra vitae.
