--- a/grc338/ website-mobile-first/contact.html
+++ b/grc338/ website-mobile-first/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -11,44 +11,42 @@
     </head>
 
     <body>
-     <div class="container">
-        <header>
-            <h1>
-                <a href="index.html"><img src="logo.svg" alt="Logo." /> </a>
-            </h1>
+        <div class="container">
+            <header>
+                <h1>
+                    <a href="index.html"><img src="logo.svg" alt="Logo." /> </a>
+                </h1>
 
-            <nav>
-                <ul>
-                    <li><a href="about.html">about</a></li>
-                    <li><a href="menu.html">menu</a></li>
-                    <li><a href="contact.html">contact</a></li>
-                </ul>
-            </nav>
-        </header>
+                <nav>
+                    <ul>
+                        <li><a href="about.html">about</a></li>
+                        <li><a href="menu.html">menu</a></li>
+                        <li><a href="contact.html">contact</a></li>
+                    </ul>
+                </nav>
+            </header>
 
-        <main>
+            <main>
+                <h2>Contact Us</h2>
 
-        <h2>Contact Us</h2>
+                <img src="placeholder.jpg" alt="placeholder image." />
 
-        <img src="placeholder.jpg" alt="placeholder." />
+                <p>123 Happy Ave, San Luis Obispo, California</p>
 
-        <p>123 Happy Ave, San Luis Obispo, California</p>
+                <p>805-756-3663</p>
 
-        <p>805-756-3663</p>
+                <h3>Hours</h3>
 
-        <h3>Hours</h3>
+                <p>Tuesday–Friday: 0:00–0:00</p>
 
-        <p>Tuesday–Friday: 0:00–0:00</p>
+                <p>Saturday–Sunday: 0:00–0:00</p>
 
-        <p>Saturday–Sunday: 0:00–0:00</p>
+                <p>Closed on Mondays</p>
+            </main>
 
-        <p>Closed on Mondays</p>
-
-        </main>
-
-        <footer>
-            <p>© All rights reserved. The Restaurant, 2025.</p>
-        </footer>
-    </div>
+            <footer>
+                <p>© All rights reserved. The Restaurant, 2025.</p>
+            </footer>
+        </div>
     </body>
 </html>
