--- a/grc338/ website-mobile-first/index.html
+++ b/grc338/ website-mobile-first/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -11,32 +11,31 @@
     </head>
 
     <body>
-      <div class="home-container">
-        <header>
-            <h1>
-                <a href="index.html"><img src="logo.svg" alt="Logo." /> </a>
-            </h1>
+        <div class="home-container">
+            <header>
+                <h1>
+                    <a href="index.html"><img src="logo.svg" alt="Logo." /> </a>
+                </h1>
 
-            <nav>
-                <ul>
-                    <li><a href="about.html">about</a></li>
-                    <li><a href="menu.html">menu</a></li>
-                    <li><a href="contact.html">contact</a></li>
-                </ul>
-            </nav>
-        </header>
+                <nav>
+                    <ul>
+                        <li><a href="about.html">about</a></li>
+                        <li><a href="menu.html">menu</a></li>
+                        <li><a href="contact.html">contact</a></li>
+                    </ul>
+                </nav>
+            </header>
 
-        <main>
-        <p class="slogan">Every business has a nice slogan. Ours is coming soon.</p>
+            <main>
+                <p class="slogan">Every business has a nice slogan. Ours is coming soon.</p>
 
-        <address>123 Happy Ave, San Luis Obispo, California</address>
-        <address>805-756-1108</address>
-        </main>
+                <address>123 Happy Ave, San Luis Obispo, California</address>
+                <address>805-756-1108</address>
+            </main>
 
-        <footer>
-            <p>© All rights reserved. The Restaurant, 2025.</p>
-        </footer>
-    </div>
+            <footer>
+                <p>© All rights reserved. The Restaurant, 2025.</p>
+            </footer>
+        </div>
     </body>
 </html>
-
