--- a/grc338/website-visual-language/contact.html
+++ b/grc338/website-visual-language/contact.html
@@ -30,7 +30,7 @@
             <main>
                 <img
                     src="family.jpg"
-                    alt="Thirteen grandchildren gathered around 2 grandparents at the beach posing for a photo."
+                    alt="Thirteen grandchildren gathered around two grandparents at the beach posing for a photo."
                 />
 
                 <article>
